--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "enzyme": "^3.4.1",
     "enzyme-adapter-react-16": "^1.2.0",
     "milligram": "^1.3.0",
+    "prop-types": "^15.6.2",
     "react-test-renderer": "^16.4.2"
   }
 }
