--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "private": true,
   "dependencies": {
     "abortcontroller-polyfill": "^1.1.9",
+    "enzyme": "^3.4.1",
+    "enzyme-adapter-react-16": "^1.2.0",
+    "milligram": "^1.3.0",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-test-renderer": "^16.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "devDependencies": {
-    "enzyme": "^3.4.1",
-    "enzyme-adapter-react-16": "^1.2.0",
-    "milligram": "^1.3.0",
-    "prop-types": "^15.6.2",
-    "react-test-renderer": "^16.4.2"
   }
 }
