--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "techtest",
   "version": "0.1.0",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "abortcontroller-polyfill": "^1.1.9",
     "enzyme": "^3.4.1",
